Fixed overflow images bug in project details

--- a/assets/scss/modules/project-details.scss
+++ b/assets/scss/modules/project-details.scss
@@ -147,7 +147,7 @@
         padding: 70px;
       }
       .images {
-        width: 100%;
+        width: 10%;
         max-width: 900px;
         margin: 0 auto 30px;
         display: flex;
@@ -159,7 +159,7 @@
           flex-grow: 1;
         }
         .img-project {
-          min-width: 150px;
+          //min-width: 150px;
           height: 100%;
           width: 100%;
           max-height: 100%;
