--- a/public/assets/style.bundle.css
+++ b/public/assets/style.bundle.css
@@ -3869,7 +3869,7 @@ body.dark #contact-title {
         .project-details .pan-right .description-wrapper {
           padding: 70px; } }
       .project-details .pan-right .description-wrapper .images {
-        width: 100%;
+        width: 10%;
         max-width: 900px;
         margin: 0 auto 30px;
         display: flex; }
@@ -3879,7 +3879,6 @@ body.dark #contact-title {
           box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
           flex-grow: 1; }
         .project-details .pan-right .description-wrapper .images .img-project {
-          min-width: 150px;
           height: 100%;
           width: 100%;
           max-height: 100%;
